Creacion pestaña oferta para porganizador en la interfaz